--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js"></script>
     <title>nic</title>
 </head>
 
