--- a/HTML/major_1.0.html
+++ b/HTML/major_1.0.html
@@ -4,11 +4,16 @@
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
-    <title>nic</title>
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>4White</title>
 </head>
 
 <body>
-   
+    <div>
+            <img src="images/4White.png" alt="LOGO" width="120vw" height="120vw" />
+            
+    </div>
 </body>
 
 </html>
