--- a/HTML/major_1.0.html
+++ b/HTML/major_1.0.html
@@ -11,33 +11,14 @@
 
 <body>
     <ul>
-        <li><a class="active" href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
-    </ul>
-</body>
-
-<body>
-    <ul>
         <li><a class="active" href="#home"></a></li>
         <li><a img src="images/4White.png"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a></li>
         <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
         <li><a img src="images/sluzby.png"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
         <li><a img src="images/cesta.png"><img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
-        <li><a img src="images/kontakty.png"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
+        <li><a style="float:right"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
+            
     </ul>
-</body>
-
-<body>
-    <div>
-        <img src="images/4White.png" alt="LOGO" width="120vw" height="120vw" />
-        <img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" />
-        <img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" />
-        <img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" />
-        <img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" />
-
-    </div>
 </body>
 
 </html>
