--- a/html/index.html
+++ b/html/index.html
@@ -3,21 +3,40 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>4White</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="js/script.js"></script>
+  <title>4White</title>
 </head>
 
 <body>
-    <div>
-            <img src="images/4White.png" alt="LOGO" width="120vw" height="120vw" />
-            <img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" />
-            <img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" />
-            <img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" />
-            <img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" />
-            
+  <div>
+    <img src="images/4White.png" alt="LOGO" width="120vw" height="120vw" />
+    <img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" />
+    <img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" />
+    <img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" />
+    <img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" />
+
+  </div>
+  <div class="slideshow-container">
+
+    <div class="mySlides fade">
+      <img src="images/1.png" style="width:100%">
     </div>
+
+    <div class="mySlides fade">
+      <img src="images/2.png" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+      <img src="images/3.png" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+      <img src="images/4.png" style="width:100%">
+    </div>
+
+  </div>
+  <br />
 </body>
 
 </html>
