--- a/HTML/major_1.0.html
+++ b/HTML/major_1.0.html
@@ -12,13 +12,23 @@
 <body>
     <ul>
         <li><a class="active" href="#home"></a></li>
-        <li><a img src="images/4White.png"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a></li>
-        <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
-        <li><a img src="images/sluzby.png"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
-        <li><a img src="images/cesta.png"><img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
+        <li><a img src="images/4White.png"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
+        </li>
+        <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
+        </li>
+        <li><a img src="images/sluzby.png"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a>
+        </li>
+        <li><a img src="images/cesta.png"><img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" /></a>
+        </li>
         <li><a style="float:right"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
-            
+
     </ul>
+</body>
+
+
+
+<body>
+    <img src="images/1">
 </body>
 
 </html>
