--- a/html/index.html
+++ b/html/index.html
@@ -10,31 +10,18 @@
 
 <body>
   <div>
-    <img src="images/4White.png" alt="LOGO" width="120vw" height="120vw" />
-    <img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" />
-    <img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" />
-    <img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" />
-    <img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" />
+    <img src="images/4White.png" alt="Logo" width="120vw" height="120vw" />
+    <img src="images/O nás.png" alt="O nas" width="120vw" height="120vw" />
+    <img src="images/sluzby.png" alt="Sluzby" width="120vw" height="120vw" />
+    <img src="images/cesta.png" alt="Cesta" width="120vw" height="120vw" />
+    <img src="images/kontakty.png" alt="Kontakty" width="120vw" height="120vw" />
 
   </div>
   <div class="slideshow-container">
-
-    <div class="mySlides fade">
-      <img src="images/1.png" style="width:100%">
-    </div>
-
-    <div class="mySlides fade">
-      <img src="images/2.png" style="width:100%">
-    </div>
-
-    <div class="mySlides fade">
-      <img src="images/3.png" style="width:100%">
-    </div>
-
-    <div class="mySlides fade">
-      <img src="images/4.png" style="width:100%">
-    </div>
-
+    <img src="images/1.png" style="width:100%">
+    <img src="images/2.png" style="width:100%">
+    <img src="images/3.png" style="width:100%">
+    <img src="images/4.png" style="width:100%">
   </div>
   <br />
 </body>
