--- a/HTML/major_1.0.html
+++ b/HTML/major_1.0.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html <html xmlns="http://www.w3.org/1999/xhtml" lang="cs" xml:lang="cs"></html>>
+<html>
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
@@ -11,8 +11,7 @@
 
 <body>
     <ul>
-        <li><a class="active" href="#home"></a></li>
-        <li><a img src="images/4White.png"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
+        <li><a ><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
         </li>
         <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
         </li>
