--- a/HTML/onas.html
+++ b/HTML/onas.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 
-<html <html xmlns="http://www.w3.org/1999/xhtml" lang="cs" xml:lang="cs"></html>>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="cs" xml:lang="cs"></html>>
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
-    <title>4Whitářče</title>
+    <title>4White</title>
 </head>
 
 <body>
     <ul>
-        <li><a class="active" href="#home"></a></li>
         <li><a img src="images/4White.png"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
         </li>
-        <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
+        <li><a href=onas.html><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
         </li>
         <li><a img src="images/sluzby.png"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a>
         </li>
