--- a/HTML/major_1.0.html
+++ b/HTML/major_1.0.html
@@ -5,8 +5,7 @@
 <head>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js"></script>
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>4Whitářče</title>
+    <title>4White</title>
 </head>
 
 <body>
