--- a/HTML/kontakty.html
+++ b/HTML/kontakty.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul>
-        <li><a href="onas.html"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
+        <li><a><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
         </li>
         <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
         </li>
@@ -25,8 +25,6 @@
 
 
 
-<body>
-    <img src="images/1">
-</body>
+
 
 </html>
