--- a/HTML/sluzby.html
+++ b/HTML/sluzby.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul>
-        <li><a href="onas.html"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
+        <li><a><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
         </li>
         <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
         </li>
@@ -23,10 +23,5 @@
     </ul>
 </body>
 
-
-
-<body>
-    <img src="images/1">
-</body>
 
 </html>
