--- a/HTML/sluzby.html
+++ b/HTML/sluzby.html
@@ -9,19 +9,19 @@
 </head>
 
 <body>
-    <ul>
-        <li><a><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
-        </li>
-        <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a img src="images/sluzby.png"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a img src="images/cesta.png"><img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a style="float:right"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
-
-    </ul>
-</body>
-
+        <ul>
+            <li><a href="major_1.0.html"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
+            </li>
+            <li><a href="onas.html"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
+            </li>
+            <li><a href="sluzby.html"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a>
+            </li>
+            <li><a href="cesta.html"><img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" /></a>
+            </li>
+            <li><a href="kontakty.html"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
+    
+        </ul>
+    </body>
+    
 
 </html>
