--- a/HTML/major_1.0.html
+++ b/HTML/major_1.0.html
@@ -9,17 +9,60 @@
 </head>
 
 <body>
-    <ul>
-        <li><a href="onas.html"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
-        </li>
-        <li><a img src="images/O nás.png"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a img src="images/sluzby.png"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a img src="images/cesta.png"><img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a style="float:right"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
+    <div>
+        <ul>
+            <li><a href="major_1.0.html"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
+            </li>
+            <li><a href="onas.html"><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
+            </li>
+            <li><a href="sluzby.html"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a>
+            </li>
+            <li><a href="cesta.html"><img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" /></a>
+            </li>
+            <li><a href="kontakty.html"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a>
+            </li>
 
-    </ul>
+        </ul>
+    </div>
 </body>
+
+<body>
+
+    <div class="slideshow-container">
+
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 4</div>
+            <img src="images/2.jpg" style="width:100%">
+            <div class="text"></div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 4</div>
+            <img src="images/2.jpg" style="width:100%">
+            <div class="text"></div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 4</div>
+            <img src="images/3.jpg" style="width:100%">
+            <div class="text"></div>
+        </div>
+
+        <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="images/4.jpg" style="width:100%">
+                <div class="text"></div>
+            </div>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+</body>
+
 </html>
