--- a/HTML/onas.html
+++ b/HTML/onas.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="cs" xml:lang="cs"></html>>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="cs" xml:lang="cs">
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <title>4White</title>
 </head>
@@ -22,12 +21,15 @@
         <li><a style="float:right"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
 
     </ul>
-</body>
 
 
+    <img src="images/1.jpg" class="mySlides">
+    <img src="images/2.jpg" class="mySlides">
+    <img src="images/3.jpg" class="mySlides">
+    <img src="images/4.jpg" class="mySlides">
 
-<body>
-    <img src="images/1">
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
