--- a/HTML/onas.html
+++ b/HTML/onas.html
@@ -1,35 +1,22 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="cs" xml:lang="cs">
+<html>
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="styles/styles.css">
     <title>4White</title>
 </head>
 
 <body>
     <ul>
-        <li><a img src="images/4White.png"><img src="images/4White.png" alt="logo" width="120vw" height="120vw"></a>
+        <li><a href="index.html"><img src="images/4White.png" alt="4White" width="120vw" height="120vw"></a></li>
+        <li><a img src="images/O nas.png"><img src="images/O nas.png" alt="O nas" width="120vw" height="120vw"></a></li>
+        <li><a img src="images/Sluzby.png"><img src="images/Sluzby.png" alt="Sluzby" width="120vw" height="120vw"></a></li>
+        <li><a img src="images/Cesta.png"><img src="images/Cesta.png" alt="Cesta" width="120vw" height="120vw"></a></li>
+        <li><a style="float:right"><img src="images/kontakty.png" alt="Kontakty" width="120vw" height="120vw" /></a>
         </li>
-        <li><a href=onas.html><img src="images/O nás.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a img src="images/sluzby.png"><img src="images/sluzby.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a img src="images/cesta.png"><img src="images/cesta.png" alt="LOGO" width="120vw" height="120vw" /></a>
-        </li>
-        <li><a style="float:right"><img src="images/kontakty.png" alt="LOGO" width="120vw" height="120vw" /></a></li>
-
     </ul>
-
-
-    <img src="images/1.jpg" class="mySlides">
-    <img src="images/2.jpg" class="mySlides">
-    <img src="images/3.jpg" class="mySlides">
-    <img src="images/4.jpg" class="mySlides">
-
     <script src="js/script.js"></script>
-
 </body>
 
 </html>
