--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,19 +10,19 @@
 <body>
     <ul>
         <li><a href="index.html"><img src="images/4White.png" alt="4White" width="120vw" height="120vw"></a></li>
-        <li><a img src="images/O nas.png"><img src="images/O nas.png" alt="O nas" width="120vw" height="120vw"></a></li>
-        <li><a img src="images/Sluzby.png"><img src="images/Sluzby.png" alt="Sluzby" width="120vw" height="120vw"></a></li>
-        <li><a img src="images/Cesta.png"><img src="images/Cesta.png" alt="Cesta" width="120vw" height="120vw"></a></li>
-        <li><a style="float:right"><img src="images/kontakty.png" alt="Kontakty" width="120vw" height="120vw" /></a>
+        <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" width="120vw" height="120vw"></a></li>
+        <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" width="120vw" height="120vw"></a></li>
+        <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" width="120vw" height="120vw"></a></li>
+        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" width="120vw" height="120vw" /></a>
         </li>
     </ul>
-    <script src="js/script.js"></script>
     <div>
         <img src="images/1.jpg" class="mySlides">
         <img src="images/2.jpg" class="mySlides">
         <img src="images/3.jpg" class="mySlides">
         <img src="images/4.jpg" class="mySlides">
     </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
