--- a/HTML/onas.html
+++ b/HTML/onas.html
@@ -13,7 +13,8 @@
         <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" width="120vw" height="120vw"></a></li>
         <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" width="120vw" height="120vw"></a></li>
         <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" width="120vw" height="120vw"></a></li>
-        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" width="120vw" height="120vw" /></a>
+        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" width="120vw"
+                    height="120vw" /></a>
         </li>
     </ul>
     <script src="js/script.js"></script>
