--- a/HTML/sluzby.html
+++ b/HTML/sluzby.html
@@ -9,12 +9,11 @@
 
 <body>
     <ul>
-        <li><a href="index.html"><img src="images/4White.png" alt="4White" width="120vw" height="120vw"></a></li>
-        <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" width="120vw" height="120vw"></a></li>
-        <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" width="120vw" height="120vw"></a></li>
-        <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" width="120vw" height="120vw"></a></li>
-        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" width="120vw"
-                    height="120vw" /></a>
+        <li><a href="index.html"><img src="images/4White.png" alt="4White" class="menu"></a></li>
+        <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" class="menu"></a></li>
+        <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" class="menu"></a></li>
+        <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
+        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
         </li>
     </ul>
     <script src="js/script.js"></script>
