--- a/html/onas.html
+++ b/html/onas.html
@@ -9,14 +9,14 @@
 
 <body>
     <ul>
-        <li><a href="index.html"><img src="images/4White.png" alt="4White" width="120vw" height="120vw"></a></li>
-        <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" width="120vw" height="120vw"></a></li>
-        <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" width="120vw" height="120vw"></a></li>
-        <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" width="120vw" height="120vw"></a></li>
-        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" width="120vw"
-                    height="120vw" /></a>
+        <li><a href="index.html"><img src="images/4White.png" alt="4White" class="menu"></a></li>
+        <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" class="menu"></a></li>
+        <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" class="menu"></a></li>
+        <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
+        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
         </li>
     </ul>
+    <img src="images/O nás (1)-page-001.jpg" class="texty">
     <script src="js/script.js"></script>
 </body>
 
