--- a/html/index.html
+++ b/html/index.html
@@ -17,10 +17,10 @@
         </li>
     </ul>
     <div>
-        <img src="images/1.jpg" class="mySlides">
+        <img src="images/1A.jpg" class="mySlides">
         <img src="images/2A.jpg" class="mySlides">
-        <img src="images/3.jpg" class="mySlides">
-        <img src="images/4.jpg" class="mySlides">
+        <img src="images/3A.jpg" class="mySlides">
+        <img src="images/4A.jpg" class="mySlides">
     </div>
     <script src="js/script.js"></script>
 </body>
