--- a/HTML/onas.html
+++ b/HTML/onas.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
-    <title>4White</title>
+    <title>4White - O nás</title>
 </head>
 
 <body>
