--- a/html/sluzby.html
+++ b/html/sluzby.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
-    <title>4White</title>
+    <title>4White - Naše služby</title>
 </head>
 
 <body>
