--- a/html/cesta.html
+++ b/html/cesta.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
-    <title>4White - Naše cesta</title>
+    <title>4White - Cesta</title>
 </head>
 
 <body>
