--- a/HTML/sluzby.html
+++ b/HTML/sluzby.html
@@ -4,18 +4,21 @@
 
 <head>
     <link rel="stylesheet" href="css/styles.css">
-    <title>4White - Naše služby</title>
+    <title>4White - Služby</title>
 </head>
 
 <body>
-    <ul>
-        <li><a href="index.html"><img src="images/4White.png" alt="4White" class="menu"></a></li>
-        <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" class="menu"></a></li>
-        <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" class="menu"></a></li>
-        <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
-        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
-        </li>
-    </ul>
+    <div>
+        <ul>
+            <li><a href="index.html"><img src="images/4White.png" alt="4White" class="menu"></a></li>
+            <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" class="menu"></a></li>
+            <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" class="menu"></a></li>
+            <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
+            <li><a href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
+            </li>
+        </ul>
+    </div>
+    <img src="images/" class="texty">
     <script src="js/script.js"></script>
 </body>
 
