--- a/html/index.html
+++ b/html/index.html
@@ -8,14 +8,16 @@
 </head>
 
 <body>
-    <ul>
-        <li><a href="index.html"><img src="images/4White.png" alt="4White" class="menu"></a></li>
-        <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" class="menu"></a></li>
-        <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" class="menu"></a></li>
-        <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
-        <li><a style="float:right" href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
-        </li>
-    </ul>
+    <div>
+        <ul>
+            <li><a href="index.html"><img src="images/4White.png" alt="4White" class="menu"></a></li>
+            <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" class="menu"></a></li>
+            <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" class="menu"></a></li>
+            <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
+            <li><a href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
+            </li>
+        </ul>
+    </div>
     <div>
         <img src="images/1A.jpg" class="mySlides">
         <img src="images/2A.jpg" class="mySlides">
