--- a/html/onas.html
+++ b/html/onas.html
@@ -18,7 +18,8 @@
             </li>
         </ul>
     </div>
-    <img src="images/" class="texty">
+    <img src="images/lista.jpg" class="lista">
+    <img src="images/O nás - stránka.jpg" class="texty">
     <script src="js/script.js"></script>
 </body>
 
