--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,9 @@
         <img src="images/3A.jpg" class="mySlides">
         <img src="images/4A.jpg" class="mySlides">
     </div>
+    <div class="footer">
+        <p>Footer</p>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
