--- a/HTML/cesta.html
+++ b/HTML/cesta.html
@@ -20,6 +20,9 @@
     </div>
     <img src="images/lista.jpg" class="lista">
     <img src="images/Cesta - stránka.jpg" class="texty">
+    <div class="footer">
+        <p>Footer</p>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
