--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,7 @@
         <img src="images/3A.jpg" class="mySlides">
         <img src="images/4A.jpg" class="mySlides">
     </div>
-    <div class="footer">
-        <p>Footer</p>
-    </div>
+    <img src="images/Paticka.jpg" class="footer">
     <script src="js/script.js"></script>
 </body>
 
