--- a/html/kontakty.html
+++ b/html/kontakty.html
@@ -20,9 +20,7 @@
     </div>
     <img src="images/lista.jpg" class="lista">
     <img src="images/Kontakty - stránka.jpg" class="texty">
-    <div class="footer">
-        <p>Footer</p>
-    </div>
+    <img src="images/Paticka.jpg" class="footer">
     <script src="js/script.js"></script>
 </body>
 
