--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,11 @@
         <img src="images/3A.jpg" class="mySlides">
         <img src="images/4A.jpg" class="mySlides">
     </div>
-    <img src="images/Paticka.jpg" class="footer">
+    <ul>
+        <li style="float:middle">
+            <a href="kontakty.html"></a><img src="images/Paticka.jpg" class="footer"></a>
+        </li>
+    </ul>
     <script src="js/script.js"></script>
 </body>
 
