--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
             <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
             <li><a href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
             </li>
+            <li><a><img src="images/plzen.jpg" alt="Plzeň" class="menu"></a></li>
         </ul>
     </div>
     <div>
@@ -24,11 +25,6 @@
         <img src="images/3A.jpg" class="mySlides">
         <img src="images/4A.jpg" class="mySlides">
     </div>
-    <ul>
-        <li>
-            <a href="kontakty.html"></a><img src="images/Paticka.jpg" class="footer"></a>
-        </li>
-    </ul>
     <script src="js/script.js"></script>
 </body>
 
