--- a/html/onas.html
+++ b/html/onas.html
@@ -16,11 +16,11 @@
             <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
             <li><a href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
             </li>
-            <li><a><img src="images/plzen.jpg" alt="Plzeň" class="menu"></a></li>
         </ul>
     </div>
     <img src="images/lista.jpg" class="lista">
     <img src="images/O nás - stránka.jpg" class="texty">
+    <footer><img src="images/Paticka.jpg" class="foot"></footer>
     <script src="js/script.js"></script>
 </body>
 
