--- a/html/kontakty.html
+++ b/html/kontakty.html
@@ -16,11 +16,12 @@
             <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
             <li><a href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
             </li>
+            <li><a href=""><img src="images/Facebook.jpg" alt="Facebook" class="menu"></a></li>
         </ul>
     </div>
-    <img src="images/lista.jpg" class="lista">
+    <img src="images/Lišta.jpg" class="lista">
     <img src="images/Kontakty - stránka.jpg" class="texty">
-    <footer><img src="images/Paticka.jpg" class="foot"></footer>
+    <footer><img src="images/Pata.jpg" class="foot"></footer>
     <script src="js/script.js"></script>
 </body>
 
