--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
             <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
             <li><a href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
             </li>
+            <li><a href=""><img src="images/Facebook.jpg" alt="Facebook" class="menu"></a></li>
         </ul>
     </div>
     <div>
@@ -24,7 +25,7 @@
         <img src="images/3A.jpg" class="mySlides">
         <img src="images/4A.jpg" class="mySlides">
     </div>
-    <footer><img src="images/Paticka.jpg" class="foot"></footer>
+    <footer><img src="images/Pata.jpg" class="foot"></footer>
     <script src="js/script.js"></script>
 </body>
 
