--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,8 @@
             <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
             <li><a href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
             </li>
-            <li><a href=""><img src="images/Facebook.jpg" alt="Facebook" class="menu"></a></li>
+            <li><a href="https://www.facebook.com/4WhitePlzen/"><img src="images/Facebook.jpg" alt="Facebook"
+                        class="menu"></a></li>
         </ul>
     </div>
     <div>
