--- a/html/onas.html
+++ b/html/onas.html
@@ -14,7 +14,7 @@
             <li><a href="onas.html"><img src="images/O nás.png" alt="O nas" class="menu"></a></li>
             <li><a href="sluzby.html"><img src="images/Služby.png" alt="Služby" class="menu"></a></li>
             <li><a href="cesta.html"><img src="images/Cesta.png" alt="Cesta" class="menu"></a></li>
-            <li><a href="kontakty.html"><img src="images/kontakty.png" alt="Kontakty" class="menu"></a>
+            <li><a href="kontakty.html"><img src="images/Kontakty.png" alt="Kontakty" class="menu"></a>
             </li>
             <li><a href="https://www.facebook.com/4WhitePlzen/"><img src="images/Facebook.jpg" alt="Facebook"
                         class="menu"></a></li>
