--- a/html/index.html
+++ b/html/index.html
@@ -21,12 +21,12 @@
         </ul>
     </div>
     <div>
-        <img src="images/1A.jpg" class="mySlides">
-        <img src="images/2A.jpg" class="mySlides">
-        <img src="images/3A.jpg" class="mySlides">
-        <img src="images/4A.jpg" class="mySlides">
+        <img src="images/1A.jpg" alt="Reklamní obrázek" class="mySlides">
+        <img src="images/2A.jpg" alt="Reklamní obrázek" class="mySlides">
+        <img src="images/3A.jpg" alt="Reklamní obrázek" class="mySlides">
+        <img src="images/4A.jpg" alt="Reklamní obrázek" class="mySlides">
     </div>
-    <footer><img src="images/Pata.jpg" class="foot"></footer>
+    <footer><img src="images/Pata.jpg" alt="Reklamní obrázek" class="foot"></footer>
     <script src="js/script.js"></script>
 </body>
 
