--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-
+<html lang="cs-cz">
 <head>
     <link rel="stylesheet" href="css/styles.css">
     <title>4White</title>
