--- a/html/cesta.html
+++ b/html/cesta.html
@@ -20,9 +20,9 @@
                         class="menu"></a></li>
         </ul>
     </div>
-    <img src="images/Lišta.jpg" class="lista">
-    <img src="images/Cesta - stránka.jpg" class="texty">
-    <footer><img src="images/Pata.jpg" class="foot"></footer>
+    <img src="images/Lišta.jpg" alt="lišta" class="lista">
+    <img src="images/Cesta - stránka.jpg" alt="cesta" class="texty">
+    <footer><img src="images/Pata.jpg" alt="Reklamní obrázek" class="foot"></footer>
     <script src="js/script.js"></script>
 </body>
 
