--- a/html/kontakty.html
+++ b/html/kontakty.html
@@ -20,9 +20,9 @@
                         class="menu"></a></li>
         </ul>
     </div>
-    <img src="images/Lišta.jpg" class="lista">
-    <img src="images/Kontakty - stránka.jpg" class="texty">
-    <footer><img src="images/Pata.jpg" class="foot"></footer>
+    <img src="images/Lišta.jpg" alt="lista" class="lista">
+    <img src="images/Kontakty - stránka.jpg" alt="kontakty" class="texty">
+    <footer><img src="images/Pata.jpg" alt="pata" class="foot"></footer>
     <script src="js/script.js"></script>
 </body>
 
